[tool.poetry]
name = "calendar"
version = "0.1.0"
description = ""
authors = ["Gabe Joseph <gjoseph92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
reportlab = "^4.0.9"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
